--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "extend": ">=3.0.2",
     "gridfs-stream": "^1.1.1",
+    "js-yaml": ">=3.13.1",
     "jsonwebtoken": "^8.2.1",
     "lodash": ">=4.17.11",
     "mailcomposer": "^4.0.2",
@@ -57,7 +59,7 @@
     "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "chai": "^4.1.2",
-    "eslint": "^2.11.1",
+    "eslint": ">=4.18.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-import": "^1.8.1",
